--- a/client/.github/workflows/deploy.yml
+++ b/client/.github/workflows/deploy.yml
@@ -12,6 +12,10 @@ permissions:
 
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -26,5 +30,5 @@ jobs:
           path: client
 
       - name: Deploy
+        id: deployment
         uses: actions/deploy-pages@v2
-        
