--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -18,6 +19,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.0",
     "path": "^0.12.7",
+    "sib-api-v3-sdk": "^8.5.0",
     "stripe": "^18.0.0"
   }
 }
