--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.0",
+    "node-cron": "^4.2.1",
     "path": "^0.12.7",
     "sib-api-v3-sdk": "^8.5.0",
     "stripe": "^18.3.0"
